--- a/CervicalApp/app/build.gradle
+++ b/CervicalApp/app/build.gradle
@@ -38,6 +38,12 @@ dependencies {
     implementation 'org.pytorch:pytorch_android:1.10.0'
     implementation 'org.pytorch:pytorch_android_torchvision:1.10.0'
 
+    // tf
+    implementation 'org.tensorflow:tensorflow-lite:2.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-gpu:2.4.0'
+    implementation 'org.tensorflow:tensorflow-lite-select-tf-ops:0.0.0-nightly-SNAPSHOT'
+
+
     // onnxruntime
     // implementation 'com.microsoft.onnxruntime:onnxruntime-mobile:1.9.0';
 }
